# task_otm_api

./: Aptfile  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  rust-toolchain  shell.nix
ampl/: tarefas.mod  tarefas.run
src/: main.rs
src/controllers/: problem.rs
src/models/: mod.rs  problem.rs  task.rs
